# mctree

./: .gitignore  README.md  makeplots.py  mctree.py  setup.cfg
codes/2mm/: 2mm.c  autotune.sh
codes/3mm/: 3mm.c  autotune.sh
codes/adi/: adi.c  autotune.sh
codes/atax/: atax.c  autotune.sh
codes/bicg/: autotune.sh  bicg.c
codes/cholesky/: autotune.sh  cholesky.c
codes/comd/: autotune.sh  compile_run.sh  ljForce.c
codes/correlation/: autotune.sh  correlation.c
codes/covariance/: autotune.sh  covariance.c
codes/deriche/: autotune.sh  deriche.c
codes/doitgen/: autotune.sh  doitgen.c
codes/durbin/: autotune.sh  durbin.c
codes/fdtd-2d/: autotune.sh  fdtd-2d.c
codes/floyd-warshall/: autotune-commutative.sh  autotune.sh  floyd-warshall.c
codes/gemm/: autotune.sh  compile_run_aocl-mt.sh  compile_run_aocl.sh  gemm.c  gemm_aocl.c  gemm_mkl.c  polybench.h
codes/gemver/: autotune.sh  gemver.c
codes/gesummv/: autotune.sh  gesummv.c
codes/gramschmidt/: autotune.sh  gramschmidt.c
codes/heat-3d/: autotune.sh  heat-3d  heat-3d.c
codes/jacobi-1d/: autotune.sh  jacobi-1d.c
codes/jacobi-2d/: autotune.sh  jacobi-2d.c
codes/lu/: autotune.sh  lu.c
codes/ludcmp/: autotune.sh  ludcmp.c
codes/miniAMR/: CMakeLists.txt  Makefile.mpi  Makefile.vulcan  autotune.sh  stencil.c
codes/mvt/: autotune.sh  mvt.c
codes/nussinov/: autotune.sh  nussinov.c
codes/seidel-2d/: autotune.sh  seidel-2d.c
codes/sw4lite/: autotune.sh  compile_run.sh  rhs4sg_rev.C
covariance/: covariance.c
gemm/: gemm.c  gemm_mkl.c
syr2k/: syr2k.c
tool/: support.py
(+102 files in other folders)
