[metadata]
name = mctree
version = 0.1.0
author = Michael Kruse
author_email = mctree@meinersbur.de
description = Generator of tree-shaped search trees for loop optimizations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/meinersbur/mctree
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Compilers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
